--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@slidev/cli": "^0.49.9",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "slidev-addon-qrcode": "^1.0.2",
     "vue": "^3.4.27"
   }
 }
